...
        }
        if (context.mounted && isCurrent) {
          final savedState = data.inWatchlist;
          ScaffoldMessenger.of(context).showFlixieToast(FlixieToast(
            type: FlixieToastType.success,
            content: Text(
                savedState ? 'Added to watchlist' : 'Removed from watchlist'),
            action: offerUndo
                ? SnackBarAction(
                    label: 'Undo',
                    onPressed: () {
                      if (context.mounted &&
                          isCurrent &&
                          data.currentlyUpdating == null &&
                          data.inWatchlist == savedState) {
                        toggleWatchlist(offerUndo: false);
...
